--- a/assets/mq.css
+++ b/assets/mq.css
@@ -111,9 +111,11 @@
 
 }
 
-input[type="submit"] {
+.btn-enviar {
     grid-column: 1 / -1;
-    width: 50%;
+    max-width: 30%;
+    text-align: center;
+    
 
 }
 
@@ -294,13 +296,13 @@ input[type="submit"] {
     }
     
     .btn-login:hover {
-         transform: translateY(-10px);
+         transform: translateY(-5px);
         box-shadow: 0 20px 40px rgba(118, 75, 162, 0.2);
         cursor: pointer;
     }
     
     .btn-registro:hover {
-         transform: translateY(-10px);
+         transform: translateY(-5px);
         box-shadow: 0 20px 40px rgba(118, 75, 162, 0.2);
         cursor: pointer;
     }
@@ -336,6 +338,7 @@ input[type="submit"] {
         cursor: pointer;
     }
 
+    
 
 
     .footer-tittle {
